# rust_simple_udp_example

./: Cargo.toml
serialize_json_udp/: Cargo.toml
serialize_json_udp/src/: main.rs
serialize_json_udp_threads/: Cargo.toml
simple_cli/: Cargo.toml
simple_cli/src/: main.rs
simple_sender_receiver/: Cargo.toml
simple_sender_receiver/src/: main.rs
src/: lib.rs  main.rs
