[package]
name = "rust_simple_udp_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[workspace]

members=[
    "simple_sender_receiver",
    "serialize_json_udp",
    "serialize_json_udp_threads",
    "simple_cli",
]
